가을 리뉴얼 [모바일] - 실서버 반영 - 헤더 및 슬라이드 배너 수정

--- a/sde_design/mobile1/_wg/import/header_02.html
+++ b/sde_design/mobile1/_wg/import/header_02.html
@@ -1,6 +1,10 @@
 
 <div class="header_02 header mh_header_logo">
 
+	<div class="join_coupon">
+		<a href="https://moonhillfood.com/article/event/8/1431/page/2/"><img src="/image/main/join_coupon.png" alt="join_coupon" /></a>
+	</div>
+
     <!-- 로고 ( 사이즈 380x150픽셀입니다 ) -->
     <div id="logo" module="Layout_LogoTop">
         <a href="/"><img src="/image/main/logo_m.png" alt="{$mall_name}" /></a>
