--- a/sde_design/mobile1/board/gallery/list.html
+++ b/sde_design/mobile1/board/gallery/list.html
@@ -26,7 +26,7 @@
             $count = 2
             $subject_cut = 22
             $login_page_url = /member/login.html
-            $deny_access_url = /index.html
+            $deny_access_url = /index_20200831.html
         -->
         <li>
             <div class="thumbnail"><a href="{$link_board_detail}" class="img"><img src="{$img_src}" onerror="this.src='//img.echosting.cafe24.com/skin/mobile_ko_KR/board/img_no.png'" alt="" width="86" /></a></div>
@@ -53,7 +53,7 @@
             $count = 2
             $subject_cut = 22
             $login_page_url = /member/login.html
-            $deny_access_url = /index.html
+            $deny_access_url = /index_20200831.html
         -->
         <li>
             <div class="thumbnail"><a href="{$link_board_detail}" class="img"><img src="{$img_src}" onerror="this.src='//img.echosting.cafe24.com/skin/mobile_ko_KR/board/img_no.png'" alt="" width="86"  /></a></div>
@@ -80,7 +80,7 @@
             $count = 12
             $subject_cut = 22
             $login_page_url = /member/login.html
-            $deny_access_url = /index.html
+            $deny_access_url = /index_20200831.html
         -->
         <ul class="thumbType grid2">
             <li>
