--- a/sde_design/skin6/_sp/pandassi.html
+++ b/sde_design/skin6/_sp/pandassi.html
@@ -43,7 +43,7 @@
     ---------------------------------------------------------------------------------------------------------->
 
         ◎ 메인 페이지
-        <!--@import(/index.html)-->
+        <!--@import(/index_20200831.html)-->
 
         ◎ 공통 레이아웃
 		◎ 상단, 우측패널, 하단 등 전반적 코드
