--- a/sde_design/skin6/board/free/list.html
+++ b/sde_design/skin6/board/free/list.html
@@ -115,7 +115,7 @@
 					<!--
 						$count = 6
 						$login_page_url = /member/login.html
-						$deny_access_url = /index.html
+						$deny_access_url = /index_20200831.html
 					-->
 					<tr>
 						<td class="chk">{$checkbox}<span class="txtNum">{$notice_icon}</span></td>
@@ -146,7 +146,7 @@
 					<!--
 						$count = 2
 						$login_page_url = /member/login.html
-						$deny_access_url = /index.html
+						$deny_access_url = /index_20200831.html
 					-->
 					<tr>
 						<td class="chk">{$checkbox}<span class="txtNum">{$fixed_icon}</span></td>
@@ -176,7 +176,7 @@
 				<tbody module="board_list_1002" class="center">
 					<!--
 						$login_page_url = /member/login.html
-						$deny_access_url = /index.html
+						$deny_access_url = /index_20200831.html
 					-->
 					<tr>
 						<td class="chk">{$checkbox}<span class="txtNum">{$no}</span></td>
