--- a/sde_design/skin6/board/gallery/list.html
+++ b/sde_design/skin6/board/gallery/list.html
@@ -123,7 +123,7 @@
 				<!--
 					$count = 2
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$notice_icon}</span></td>
@@ -154,7 +154,7 @@
 				<!--
 					$count = 2
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$fixed_icon}</span></td>
@@ -202,7 +202,7 @@
 				<!--
 					$count = 12
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<div class="sp-board-gallery-item">
 					{$checkbox}
