--- a/sde_design/skin6/board/product/write.html
+++ b/sde_design/skin6/board/product/write.html
@@ -44,7 +44,7 @@
 				$product_select_url = /product/search_board_list.html
 				$order_select_url = /order/search_board_list.html
 				$login_page_url = /member/login.html
-				$deny_access_url = /index.html
+				$deny_access_url = /index_20200831.html
 			-->
 
 			<!--상품정보-->
