--- a/sde_design/skin6/board/review/list.html
+++ b/sde_design/skin6/board/review/list.html
@@ -120,7 +120,7 @@
 					$count = 6
 					$product_name_cut = 30
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$notice_icon}</span></td>
@@ -155,7 +155,7 @@
 				<!--
 					$count = 6
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$fixed_icon}</span></td>
