--- a/sde_design/skin6/intro/member.html
+++ b/sde_design/skin6/intro/member.html
@@ -11,7 +11,7 @@
     <div module="Member_Login" class="member">
         <!--
             $forbidIpUrl = member/adminFail.html
-            $defaultReturnUrl = /index.html
+            $defaultReturnUrl = /index_20200831.html
         -->
         <h2><img src="//img.echosting.cafe24.com/skin/base_ko_KR/member/h3_login.gif" alt="회원 로그인" /></h2>
         <fieldset class="login">
