--- a/sde_design/skin6/member/login.html
+++ b/sde_design/skin6/member/login.html
@@ -68,7 +68,7 @@
 
 								<div class="sp-login-user" module="member_login">
 									<!--
-										$defaultReturnUrl = /index.html
+										$defaultReturnUrl = /index_20200831.html
 										$forbidIpUrl = member/adminFail.html
 									-->
 									<h3>회원용</h3>
