--- a/sde_design/skin6/board/free/reply.html
+++ b/sde_design/skin6/board/free/reply.html
@@ -40,7 +40,7 @@
 		<div module="board_reply_1002">
 			<!--
 				$login_page_url = /member/login.html
-				$deny_access_url = /index.html
+				$deny_access_url = /index_20200831.html
 			-->
 			<div class="ec-base-table typeWrite" select="1" input="1">
 				<table border="1" summary="">
