--- a/sde_design/skin6/board/gallery/list2.html
+++ b/sde_design/skin6/board/gallery/list2.html
@@ -103,7 +103,7 @@
 				<!--
 					$count = 2
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$notice_icon}</span></td>
@@ -134,7 +134,7 @@
 				<!--
 					$count = 2
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$fixed_icon}</span></td>
@@ -164,7 +164,7 @@
 			<tbody module="board_list_8" class="center">
 				<!--
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$no}</span></td>
