--- a/sde_design/skin6/board/product/list.html
+++ b/sde_design/skin6/board/product/list.html
@@ -126,7 +126,7 @@
 					$count = 2
 					$product_name_cut = 60
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$notice_icon}</span></td>
@@ -163,7 +163,7 @@
 				<!--
 					$count = 2
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$fixed_icon}</span></td>
@@ -199,7 +199,7 @@
 			<tbody module="board_list_4" class="center">
 				<!--
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$no}</span></td>
