--- a/sde_design/skin6/board/product/list33.html
+++ b/sde_design/skin6/board/product/list33.html
@@ -105,7 +105,7 @@
 					$count = 2
 					$product_name_cut = 30
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$notice_icon}</span></td>
@@ -142,7 +142,7 @@
 				<!--
 					$count = 2
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$fixed_icon}</span></td>
@@ -178,7 +178,7 @@
 			<tbody module="board_list_4" class="center">
 				<!--
 					$login_page_url = /member/login.html
-					$deny_access_url = /index.html
+					$deny_access_url = /index_20200831.html
 				-->
 				<tr>
 					<td class="chk">{$checkbox}<span class="txtNum">{$no}</span></td>
