인스타그램 엑세스 토큰 재발급 및 메타태그 추가 작업

--- a/sde_design/skin6/_sp/apps/module/insta/insta.html
+++ b/sde_design/skin6/_sp/apps/module/insta/insta.html
@@ -2,14 +2,16 @@
 <!-- 인스타그램 -->
 <div class="insta">
     <h2 class="insta_title"><img src="/image/main/hash_instagram.png" alt="인스타그램"></h2>
-    <div id="instagram"></div>
+    <div id="instagram">
+
+    </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
     //if(!$('.instagram').length) { return; }
 
-    var token = "IGQVJVLUVXOTVablJmRl9BWU1BS2gwanhkRXVxaGFFbENZAdmdNbkIzanJyMmVXSXpoeGNSaFdWdEJjTVpla1drU2tuTGJ1NTB5OVBwTEZASWW9UQ0VCemFYRkhFd0lUeko3Mzh4N29LOGdkNXBQemtsZAgZDZD";
+    var token = "IGQVJVY0xLR2F2cnVuOUs4cGIzOEVPblBXWE53aDRjODlpcHVYTGgwRU14QW1FdlBySzlFTDE4QkF0ZAVFDVUVqNGJVbFNONW9Hb2JaTFdFVUl4bDc1ckxhNEVhOXRqQ1puRE5PblVTRExJMUVGMFhnVAZDZD";
     $.ajax({
         type: "GET",
         dataType: "jsonp",
