베스트 align 스타일 수정 작업

--- a/sde_design/skin6/_sp/apps/module/insta/insta.html
+++ b/sde_design/skin6/_sp/apps/module/insta/insta.html
@@ -2,9 +2,7 @@
 <!-- 인스타그램 -->
 <div class="insta">
     <h2 class="insta_title"><img src="/image/main/hash_instagram.png" alt="인스타그램"></h2>
-    <div id="instagram">
-
-    </div>
+    <div id="instagram"></div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
