인스타 엑세스코드 리제너레이팅 및 레이아웃 스타일 수정

--- a/sde_design/skin6/index.html
+++ b/sde_design/skin6/index.html
@@ -277,6 +277,7 @@
 								$main_list = yes
 								$main_list_reply_view = no
 							-->
+							<!-- 슬라이더 루프 -->
 							<div module="board_notice_1"  class="sp-slider-loop notice "><a href="{$link_board_detail}" class="sp-slider-keyword sp-one" date="{$write_date}"><i rank="N"></i>{$subject}</a></div>
 							<div module="board_notice_1"  class="sp-slider-loop notice"><a href="{$link_board_detail}" class="sp-slider-keyword sp-one" date="{$write_date}"><i rank="N"></i>{$subject}</a></div>
 							<div class="sp-slider-loop"><a href="{$link_board_detail}" class="sp-slider-keyword sp-one" date="{$write_date}"><i rank="1"></i>{$subject}</a></div>
