인스타 엑세스코드 리제너레이팅

--- a/sde_design/skin6/_sp/apps/module/insta/insta.html
+++ b/sde_design/skin6/_sp/apps/module/insta/insta.html
@@ -7,9 +7,9 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
-    //if(!$('.instagram').length) { return; }
+    //if(!$('.instagram').length) { return; }k
 
-    var token = "IGQVJYRUh2R3lzWXI2NEYxVzVfLUNYOWsyUG5DVVVJZAkpQX2t3ZAkVhSGpVV2Jqc2szakpSVC1BT1Atb3k2WEw4X3NzRk10TkdsYktOaDk0ZAzBGTGZAzajBQOWtORDZAxcS0zem5IYkpXTE9sZAkJISnBJcAZDZD";
+    var token = "IGQVJVdkU5NHFpOHhJcjRtNVZAvVWNOblpZAWENDYjFsanJiQ0RJU1lpZADl5WnJCX0lyNC1lTFg5S010VldNemwzQ2VRNHRBcTV1TExMdmpVYmpkUHM5M1hNQXctbGd6RmhXcS03R0hKUDJPWVBBQXExYwZDZD";
     $.ajax({
         type: "GET",
         dataType: "jsonp",
